--- a/install
+++ b/install
@@ -2,8 +2,8 @@
 
 set -e
 
-CONFIG="install.conf.yaml"
-DOTBOT_DIR="dotbot"
+CONFIG="config.yaml"
+DOTBOT_DIR="submodules/dotbot"
 
 DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
